Add a new step allowing to validate the secret repartition

--- a/public/style.css
+++ b/public/style.css
@@ -821,7 +821,7 @@ textarea {
 .user-list.hide-not-matching .user-item.not-matching {
     display: none;
 }
-.user-list .user-item:hover {
+.user-list:not(.no-hover) .user-item:hover {
     background-color: var(--color-gray-light);
     cursor: pointer;
 }
@@ -870,6 +870,19 @@ textarea {
 }
 .checked-users-summary .user-summary span[data-uncheck-user] {
     cursor: pointer;
+}
+.validate-step .user-summary {
+    display: flex;
+    align-items: center;
+    width: 30%;
+}
+.validate-step .text {
+    display: flex;
+    justify-content: center;
+    width: 20%;
+}
+.validate-step .shuffle-button {
+    margin: 2rem;
 }
 
 /**
@@ -1289,18 +1302,54 @@ textarea {
     list-style: none;
     padding-left: 0;
 }
+.faq summary {
+    position: relative;
+    padding-right: 2em;
+}
+.faq-anchor {
+    position: absolute;
+    right: 0;
+}
 details {
     margin-bottom: 2em;
+    border: 1px solid var(--color-gray);
+    border-radius: var(--border-radius);
+    padding: 1em 1em 0;
 }
-summary {
-    padding-top: 2px;
+details > summary::before {
+    margin-right: 1ch;
+    display: inline-block;
+    float: left;
+    content: '▶️';
+    transition: 0.2s;
+}
+details[open] > summary {
+    list-style-type: '🔽';
+    border-bottom: 1px solid var(--color-gray);
+    margin-bottom: 1em;
+}
+details[open] > summary::before {
+    transform: rotate(90deg);
+}
+details > summary {
+    margin: -1em -1em 0;
+    padding: 1em;
     cursor: pointer;
     font-weight: bold;
     color: var(--color-primary);
 }
-summary i {
+details > summary i {
     margin: 0 10px;
 }
+details > summary h3,
+details > summary p {
+    margin: 0;
+}
+
+details[open] {
+    #padding: 1em;
+}
+
 
 /** Override Font Awesome because the logo are not up to date **/
 .custom-fa-slack, .custom-fa-discord, .custom-fa-zoom, .custom-fa-webex {
