--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -20,7 +20,7 @@
                         <details id="data-collect">
                             <summary>
                                 <h3>
-                                    <p><a href="#data-collect"><i class="fas fa-link"></i></a>What do you do with the
+                                    <p><a href="#data-collect" class="faq-anchor"><i class="fas fa-link"></i></a>What do you do with the
                                         data you collect?</p>
                                 </h3>
                             </summary>
@@ -41,7 +41,7 @@
                         <details id="data-retention">
                             <summary>
                                 <h3>
-                                    <p><a href="#data-retention"><i class="fas fa-link"></i></a>How long do you keep the
+                                    <p><a href="#data-retention" class="faq-anchor"><i class="fas fa-link"></i></a>How long do you keep the
                                         collected data?</p>
                                 </h3>
                             </summary>
@@ -61,7 +61,7 @@
                         <details id="howto">
                             <summary>
                                 <h3>
-                                    <p><a href="#howto"><i class="fas fa-link"></i></a>How does it work?</p>
+                                    <p><a href="#howto" class="faq-anchor"><i class="fas fa-link"></i></a>How does it work?</p>
                                 </h3>
                             </summary>
                             <p>
@@ -132,7 +132,7 @@
                         <details id="secret-repartition">
                             <summary>
                                 <h3>
-                                    <p><a href="#secret-repartition"><i class="fas fa-link"></i></a>How can I retrieve
+                                    <p><a href="#secret-repartition" class="faq-anchor"><i class="fas fa-link"></i></a>How can I retrieve
                                         the
                                         secret repartition ?</p>
                                 </h3>
@@ -160,7 +160,7 @@
                         <details id="custom-message">
                             <summary>
                                 <h3>
-                                    <p><a href="#custom-message"><i class="fas fa-link"></i></a>Can I add a custom message for some members ?
+                                    <p><a href="#custom-message" class="faq-anchor"><i class="fas fa-link"></i></a>Can I add a custom message for some members ?
                                     </p>
                                 </h3>
                             </summary>
@@ -188,7 +188,7 @@
                         <details id="odd">
                             <summary>
                                 <h3>
-                                    <p><a href="#odd"><i class="fas fa-link"></i></a>Will the app work with an odd
+                                    <p><a href="#odd" class="faq-anchor"><i class="fas fa-link"></i></a>Will the app work with an odd
                                         number of participant?</p>
                                 </h3>
                             </summary>
@@ -202,7 +202,7 @@
                         <details id="avoid-association">
                             <summary>
                                 <h3>
-                                    <p><a href="#avoid-association"><i class="fas fa-link"></i></a>Can I make sure
+                                    <p><a href="#avoid-association" class="faq-anchor"><i class="fas fa-link"></i></a>Can I make sure
                                         someone will be matched or not matched with
                                         someone else?</p>
                                 </h3>
@@ -217,7 +217,7 @@
                         <details id="new-participant">
                             <summary>
                                 <h3>
-                                    <p><a href="#new-participant"><i class="fas fa-link"></i></a>Can I add a new
+                                    <p><a href="#new-participant" class="faq-anchor"><i class="fas fa-link"></i></a>Can I add a new
                                         participant once messages have been sent?</p>
                                 </h3>
                             </summary>
@@ -233,7 +233,7 @@
                         <details id="big-team">
                             <summary>
                                 <h3>
-                                    <p><a href="#big-team"><i class="fas fa-link"></i></a>Will the app work with team
+                                    <p><a href="#big-team" class="faq-anchor"><i class="fas fa-link"></i></a>Will the app work with team
                                         larger than 500 people?</p>
                                 </h3>
                             </summary>
@@ -268,7 +268,7 @@
                         <details id="discord-bot-offline">
                             <summary>
                                 <h3>
-                                    <p><a href="#discord-bot-offline"><i class="fas fa-link"></i></a>Why is the bot always offline?</p>
+                                    <p><a href="#discord-bot-offline" class="faq-anchor"><i class="fas fa-link"></i></a>Why is the bot always offline?</p>
                                 </h3>
                             </summary>
                             <p>The bot is only there to send private message to each participant. You won't interact
@@ -281,7 +281,7 @@
                         <details id="discord-server-dm">
                             <summary>
                                 <h3>
-                                    <p><a href="#discord-server-dm"><i class="fas fa-link"></i></a>What to do when a
+                                    <p><a href="#discord-server-dm" class="faq-anchor"><i class="fas fa-link"></i></a>What to do when a
                                         user does not allow to receive private
                                         message on a Discord server?</p>
                                 </h3>
@@ -314,7 +314,7 @@
                         <details id="invalid-user">
                             <summary>
                                 <h3>
-                                    <p><a href="#invalid-user"><i class="fas fa-link"></i></a>Why did someone receive
+                                    <p><a href="#invalid-user" class="faq-anchor"><i class="fas fa-link"></i></a>Why did someone receive
                                         <code>@invalid-user</code> as the person to
                                         gift?</p>
                                 </h3>
@@ -335,7 +335,7 @@
                         <details id="webex-account">
                             <summary>
                                 <h3>
-                                    <p><a href="#webex-account"><i class="fas fa-link"></i></a>What kind of Webex account is needed?</p>
+                                    <p><a href="#webex-account" class="faq-anchor"><i class="fas fa-link"></i></a>What kind of Webex account is needed?</p>
                                 </h3>
                             </summary>
                             <p>The Webex by Cisco integration requires a Free or Paid Webex account.</p>
@@ -345,7 +345,7 @@
                         <details id="webex-setup">
                             <summary>
                                 <h3>
-                                    <p><a href="#webex-setup"><i class="fas fa-link"></i></a>How to add the Webex integration?</p>
+                                    <p><a href="#webex-setup" class="faq-anchor"><i class="fas fa-link"></i></a>How to add the Webex integration?</p>
                                 </h3>
                             </summary>
                             <p>Head over our <a href="{{ path('webex_landing') }}">dedicated Webex tutorial</a> to learn more about adding Secret Santa on Webex.</p>
@@ -355,7 +355,7 @@
                         <details id="webex-revoke">
                             <summary>
                                 <h3>
-                                    <p><a href="#webex-revoke"><i class="fas fa-link"></i></a>How do I revoke the permission I gave?</p>
+                                    <p><a href="#webex-revoke" class="faq-anchor"><i class="fas fa-link"></i></a>How do I revoke the permission I gave?</p>
                                 </h3>
                             </summary>
                             <p>We are not storing any token or permission - so consider your Webex account already free from all ties with Secret Santa.</p>
@@ -372,7 +372,7 @@
                         <details id="hall-of-fame">
                             <summary>
                                 <h3>
-                                    <p><a href="#hall-of-fame"><i class="fas fa-link"></i></a>How can I add my company /
+                                    <p><a href="#hall-of-fame" class="faq-anchor"><i class="fas fa-link"></i></a>How can I add my company /
                                         organization to your Hall of Fame?</p>
                                 </h3>
                             </summary>
