--- a/templates/santa/message.html.twig
+++ b/templates/santa/message.html.twig
@@ -108,17 +108,18 @@
             {% block options %}{% endblock %}
 
             <div class="run-step">
-                <h2>Ready to send all the messages?</h2>
+                <h2>Ready for next step?</h2>
 
                 <p class="is-center">
-                    Everything is setup? Let's go to the next step. We are going to shuffle the
-                    participants and send them a private message to inform them of their peer name.
+                    You have configured everything like you wanted? Let's go to the next step. We are going to shuffle the
+                    participants and let you validate the associations. Don't want to be spoiled? No worries, associations
+                    will be hidden by default!
                 </p>
 
                 <div class="is-center">
                     <button type="submit" class="big-button" id="submit-button">
-                        <span class="fas fa-paper-plane" aria-hidden="true"></span>
-                        Shuffle and send Secret Santa messages!
+                        <span class="fas fa-dice" aria-hidden="true"></span>
+                        Shuffle the participants
                     </button>
                 </div>
 
