--- a/templates/santa/validate.html.twig
+++ b/templates/santa/validate.html.twig
@@ -17,7 +17,7 @@
             If you are not satisfied, you can <strong>shuffle the list</strong> again.
         </p>
 
-        <details>
+        <details {{ app.request.get('reshuffled') ? 'open' : '' }}>
             <summary>Ready to be spoiled? Open this box!</summary>
 
             <p>Here is the secret repartition:</p>
