--- a/public/style.css
+++ b/public/style.css
@@ -74,9 +74,9 @@ https://github.com/yahoo/pure/blob/master/LICENSE.md
     --color-error: var(--color-primary-dark);
     --color-error-background: #ffeaea;
     --color-slack: #ecb22e;
-    --color-webex: #316aff;
+    --color-webex: #6EBE4A;
     --color-discord: #7289da;
-    --color-zoom: #0E71EB; /* cf. https://zoom.us/brandguidelines */
+    --color-zoom: #0b5cff; /* cf. https://zoom.us/brandguidelines */
     --border-radius: 5px;
     --button-border-radius: 10px;
 }
