--- a/templates/santa/participants.html.twig
+++ b/templates/santa/participants.html.twig
@@ -24,7 +24,7 @@
                         <div class="run-column run-column-left">
                             <div class="sticky-container">
                                 <div class="sticky">
-                                    <h3 class="is-center">Available users</h3>
+                                    <h3 class="is-center">Available users ({{ users | length }})</h3>
                                     {% if groups %}
                                         <div class="group-selection">
                                             <label>Select all people in a group with one click:</label>
