--- a/templates/santa/application/participants_discord.html.twig
+++ b/templates/santa/application/participants_discord.html.twig
@@ -5,7 +5,7 @@
 {% macro userSummary(userForm, user) %}
     <span class="user-summary">
         {% if user.extra.image %}
-            <img src="{{ user.extra.image }}" alt=""/>
+            <img src="{{ user.extra.image }}" alt="" loading="lazy" />
         {% endif %}
         <span>{{ user.name }}</span>
         <span data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></span>
@@ -30,7 +30,7 @@
         </div>
 
         {% if user.extra.image %}
-            <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
+            <img src="{{ user.extra.image }}" alt="{{ user.name }}" loading="lazy" height="32" width="32" />
         {% endif %}
         <span>{{ user.name }}{% if user.extra.nickname %} ({{ user.extra.nickname }}){% endif %}</span>
         {% if groups %}
