--- a/templates/santa/application/participants_slack.html.twig
+++ b/templates/santa/application/participants_slack.html.twig
@@ -6,7 +6,7 @@
 
 {% macro userSummary(userForm, user) %}
     <span class="user-summary">
-        <img src="{{ user.extra.image }}" alt=""/>
+        <img src="{{ user.extra.image }}" alt="" loading="lazy" />
         <span>{{ user.extra.nickname }}</span>
         <span data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></span>
     </span>
@@ -28,7 +28,7 @@
             }}
             ) }}
         </div>
-        <img src="{{ user.extra.image }}" alt="{{ user.name }}"/>
+        <img src="{{ user.extra.image }}" alt="{{ user.name }}" loading="lazy" height="32" width="32" />
         <span>{{ user.name }} ({{ user.extra.nickname }})</span>
         {% if groups %}
             <span class="user-groups">
