--- a/templates/santa/message.html.twig
+++ b/templates/santa/message.html.twig
@@ -1,6 +1,6 @@
 {% extends 'santa/base.html.twig' %}
 
-{% set step = 2 %}
+{% set currentStep = 2 %}
 
 {% block santa_content %}
     <div class="run-block">
