--- a/templates/santa/send_messages.html.twig
+++ b/templates/santa/send_messages.html.twig
@@ -1,6 +1,6 @@
 {% extends 'santa/base.html.twig' %}
 
-{% set step = 4 %}
+{% set currentStep = 4 %}
 
 {% block santa_content %}
     <div class="content send-messages is-center">
