--- a/templates/santa/validate.html.twig
+++ b/templates/santa/validate.html.twig
@@ -1,6 +1,6 @@
 {% extends 'santa/base.html.twig' %}
 
-{% set step = 3 %}
+{% set currentStep = 3 %}
 
 {% block santa_content %}
     {{ form_start(form) }}
