--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -1,6 +1,6 @@
 {% extends 'santa/base.html.twig' %}
 
-{% set step = 5 %}
+{% set currentStep = 5 %}
 
 {% block santa_content %}
     <div class="content result-block">
