--- a/templates/santa/load_users.html.twig
+++ b/templates/santa/load_users.html.twig
@@ -1,6 +1,6 @@
 {% extends 'santa/base.html.twig' %}
 
-{% set step = 1 %}
+{% set currentStep = 1 %}
 
 {% block santa_content %}
     <div class="content load-users is-center">
